--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.yello.task.middleman">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -14,6 +16,7 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="com.yello.task.middleman" />
+                <action android:name="com.yello.task.MiddleMan.response" />
             </intent-filter>
         </receiver>
         <activity android:name=".MainActivity">
